test/arrays/waynew/init2.good
init2.chpl:8: error: halt reached - indexing out of bounds in dimension 1: [1] but array bounds are 0..10 by 3
